--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,31 +9,46 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/header.css">
-  </head>
-  <body>
+</head>
+
+<body>
     <header class="header">
-      <img
-        class="header__logo"
-        src="https://softuni.bg/content/images/svg-logos/software-university-logo.svg"
-        alt="LOGO"
-      />
+        <img class="header__logo" src="https://softuni.bg/content/images/svg-logos/software-university-logo.svg"
+            alt="LOGO" />
 
-      <nav class="nav">
-        <ul class="list" role="list">
-          <li class="nav__item"><a href="" class="nav__item__link">Home</a></li>
-          <li class="nav__item"><a href="" class="nav__item__link">News</a></li>
-          <li class="nav__item">
-            <a href="" class="nav__item__link">About</a>
-          </li>
-          <li class="nav__item">
-            <a href="" class="nav__item__link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+        <nav class="nav">
+            <ul class="list" role="list">
+                <li class="nav__item"><a href="" class="nav__item__link">Home</a></li>
+                <li class="nav__item"><a href="" class="nav__item__link">News</a></li>
+                <li class="nav__item">
+                    <a href="" class="nav__item__link">About</a>
+                </li>
+                <li class="nav__item">
+                    <a href="" class="nav__item__link">Contacts</a>
+                </li>
+            </ul>
+        </nav>
 
-      <button class="btn-login">
-        <img src="./user-icon.png" alt="">
-      </button>
+        <button class="btn-login">
+            <img src="./user-icon.png" alt="">
+        </button>
     </header>
-  </body>
+    <main>
+        <section id="hero">
+            <div class="info">
+                <h1 class="info__title">Landing Template for Startups</h1>
+                <div>
+                    <p class="info__description">Our landing page template works on all devices, so you only have to set
+                        it up once and get beautiful results.
+                    </p>
+                    <button class=" btn btn--primary">
+                        Pricing and Plans
+                    </button>
+                </div>
+            </div>
+        </section>
+        <img src="" alt="">
+    </main>
+</body>
+
 </html>
