add image to html

--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </section>
-        <img src="" alt="">
+        <img src="images/Dashboard Safia.png" alt="Home image">
     </main>
 </body>
 
