--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -38,7 +38,7 @@
         <section id="hero">
             <div class="info">
                 <h1 class="info__title">Landing Template for Startups</h1>
-                <div>
+                <div class="wrap">
                     <p class="info__description">Our landing page template works on all devices, so you only have to set
                         it up once and get beautiful results.
                     </p>
