--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/components/button.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/hero.css">
 </head>
@@ -42,7 +43,7 @@
                     <p class="info__description">Our landing page template works on all devices, so you only have to set
                         it up once and get beautiful results.
                     </p>
-                    <button class=" btn btn--primary">
+                    <button class="btn btn--primary">
                         Pricing and Plans
                     </button>
                 </div>
