--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -39,11 +39,11 @@
         <section id="hero">
             <div class="info">
                 <h1 class="info__title">Landing Template for Startups</h1>
-                <div class="wrap">
+                <div class="info__wrapper">
                     <p class="info__description">Our landing page template works on all devices, so you only have to set
                         it up once and get beautiful results.
                     </p>
-                    <button class="btn btn--primary">
+                    <button class="btn btn-primary">
                         Pricing and Plans
                     </button>
                 </div>
