--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -48,7 +48,7 @@
                     </button>
                 </div>
             </div>
-            <img src="images/Dashboard Safia.png" alt="Home image">
+            <img class="her__img" src="images/Dashboard Safia.png" alt="Home image">
         </section>
     </main>
 </body>
