update css with grid and flex

--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -49,6 +49,25 @@
                 </div>
             </div>
             <img class="her__img" src="images/Dashboard Safia.png" alt="Home image">
+            
+            <ul class="clients" role="list">
+                <li class="clients__item">
+                    <img src="images/Google_2015_logo 1.png" alt="">
+                </li>
+                <li class="clients__item">
+                    <img src="images/Slack_Technologies_Logo 1.png" alt="">
+                </li>
+                <li class="clients__item">
+                    <img src="images/Amazon_logo 1.png" alt="">
+                </li>
+                <li class="clients__item">
+                    <img src="images/Zoom_Communications_Logo 1.png" alt="">
+                </li>
+                <li class="clients__item">
+                    <img src="images/Netflix_2015_logo 1.png" alt="">
+                </li>
+            </ul>
+
         </section>
     </main>
 </body>
