--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -36,7 +36,7 @@
         </button>
     </header>
     <main>
-        <section id="hero">
+        <section id="hero" class="section">
             <div class="info">
                 <h1 class="info__title">Landing Template for Startups</h1>
                 <div class="info__wrapper">
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <img class="her__img" src="images/Dashboard Safia.png" alt="Home image">
-            
+
             <ul class="clients" role="list">
                 <li class="clients__item">
                     <img src="images/Google_2015_logo 1.png" alt="">
@@ -67,6 +67,54 @@
                     <img src="images/Netflix_2015_logo 1.png" alt="">
                 </li>
             </ul>
+
+        </section>
+
+        <section id="ow-it-works" class="section">
+            <h5 class="section__sub-title">saflow</h5>
+            <h3 class="section__title">How does it worrk?</h3>
+
+            <div class="hiw__row">
+                <img src="images/how-01.png" alt="" class="row__img">
+                <div class="row__text">
+                    <h3 class="text__title">
+                        How does it worrk?
+                    </h3>
+                    <p class="text__desc">
+                        Our landing page template works on all devices,
+                        so you only have to set it up once and get beautiful
+                        results.
+                    </p>
+                </div>
+            </div>
+
+            <div class="hiw__row">
+                <div class="row__text">
+                    <h3 class="text__title">
+                        How does it worrk?
+                    </h3>
+                    <p class="text__desc">
+                        Our landing page template works on all devices,
+                        so you only have to set it up once and get beautiful
+                        results.
+                    </p>
+                </div>
+                <img src="images/how-02.png" alt="" class="row__img">
+            </div>
+
+            <div class="hiw__row">
+                <img src="images/how-03.png" alt="" class="row__img">
+                <div class="row__text">
+                    <h3 class="text__title">
+                        How does it worrk?
+                    </h3>
+                    <p class="text__desc">
+                        Our landing page template works on all devices,
+                        so you only have to set it up once and get beautiful
+                        results.
+                    </p>
+                </div>
+            </div>
 
         </section>
     </main>
