--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/components/button.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/hero.css">
+    <link rel="stylesheet" href="styles/how-it-works.css">
 </head>
 
 <body>
@@ -70,7 +71,7 @@
 
         </section>
 
-        <section id="ow-it-works" class="section">
+        <section id="how-it-works" class="section">
             <h5 class="section__sub-title">saflow</h5>
             <h3 class="section__title">How does it worrk?</h3>
 
