--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -118,6 +118,18 @@
             </div>
 
         </section>
+
+        <section id="pricing" class="section">
+            <h5 class="section__sub-title">saflow</h5>
+            <h3 class="section__title">Pricing</h3>
+
+            <div class="pricing__row">
+                <div class="plan">
+                    <h5 class="plan__name">Free</h5>
+                    <h3 class="plan__price"><span class="sign">$</span>0</h3>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
