--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -6,12 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/components/button.css">
-    <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/hero.css">
-    <link rel="stylesheet" href="styles/how-it-works.css">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
@@ -127,6 +122,89 @@
                 <div class="plan">
                     <h5 class="plan__name">Free</h5>
                     <h3 class="plan__price"><span class="sign">$</span>0</h3>
+                    <div class="plam__divider"></div>
+
+                    <ul class="features" role="list">
+                        <li class="feature">
+                            <img class="feature__icon" src="images/check.png" alt="Checked">
+                            <p class="feauture__text">7,000,000+ Events</p>
+                        </li>
+                        <li class="feature">
+                            <img class="feature__icon" src="images/check.png" alt="Checked">
+                            <p class="feauture__text">4 Custom Domains</p>
+                        </li>
+                        <li class="feature">
+                            <img class="feature__icon" src="images/check.png" alt="Checked">
+                            <p class="feauture__text">Dedicated Support Agent</p>
+                        </li>
+                        <li class="feature">
+                            <img class="feature__icon" src="images/check.png" alt="Checked">
+                            <p class="feauture__text">12 Months Data History</p>
+                        </li>
+                        <li class="feature">
+                            <img class="feature__icon" src="images/check.png" alt="Checked">
+                            <p class="feauture__text">1 Dedicated SSL</p>
+                        </li>
+                    </ul>
+                    <button class="btn btn--secondary plan__cta">Get Started</button>
+                </div>
+                <div class="plan plan--promoted">
+                    <h5 class="plan__name">Free</h5>
+                    <h3 class="plan__price"><span class="sign">$</span>0</h3>
+                    <div class="plam__divider"></div>
+
+                    <ul class="features" role="list">
+                        <li class="feature">
+                            <img class="feature__icon" src="images/check.png" alt="Checked">
+                            <p class="feauture__text">7,000,000+ Events</p>
+                        </li>
+                        <li class="feature">
+                            <img class="feature__icon" src="images/check.png" alt="Checked">
+                            <p class="feauture__text">4 Custom Domains</p>
+                        </li>
+                        <li class="feature">
+                            <img class="feature__icon" src="images/check.png" alt="Checked">
+                            <p class="feauture__text">Dedicated Support Agent</p>
+                        </li>
+                        <li class="feature">
+                            <img class="feature__icon" src="images/check.png" alt="Checked">
+                            <p class="feauture__text">12 Months Data History</p>
+                        </li>
+                        <li class="feature">
+                            <img class="feature__icon" src="images/check.png" alt="Checked">
+                            <p class="feauture__text">1 Dedicated SSL</p>
+                        </li>
+                    </ul>
+                    <button class="btn btn--secondary plan__cta">Get Started</button>
+                </div>
+                <div class="plan">
+                    <h5 class="plan__name">Free</h5>
+                    <h3 class="plan__price"><span class="sign">$</span>0</h3>
+                    <div class="plam__divider"></div>
+
+                    <ul class="features" role="list">
+                        <li class="feature">
+                            <img class="feature__icon" src="images/check.png" alt="Checked">
+                            <p class="feauture__text">7,000,000+ Events</p>
+                        </li>
+                        <li class="feature">
+                            <img class="feature__icon" src="images/check.png" alt="Checked">
+                            <p class="feauture__text">4 Custom Domains</p>
+                        </li>
+                        <li class="feature">
+                            <img class="feature__icon" src="images/check.png" alt="Checked">
+                            <p class="feauture__text">Dedicated Support Agent</p>
+                        </li>
+                        <li class="feature">
+                            <img class="feature__icon" src="images/check.png" alt="Checked">
+                            <p class="feauture__text">12 Months Data History</p>
+                        </li>
+                        <li class="feature">
+                            <img class="feature__icon" src="images/check.png" alt="Checked">
+                            <p class="feauture__text">1 Dedicated SSL</p>
+                        </li>
+                    </ul>
+                    <button class="btn btn--secondary plan__cta">Get Started</button>
                 </div>
             </div>
         </section>
