fihx html and update css

--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -122,7 +122,7 @@
                 <div class="plan">
                     <h5 class="plan__name">Free</h5>
                     <h3 class="plan__price"><span class="sign">$</span>0</h3>
-                    <div class="plam__divider"></div>
+                    <div class="plan__divider"></div>
 
                     <ul class="features" role="list">
                         <li class="feature">
@@ -151,7 +151,7 @@
                 <div class="plan plan--promoted">
                     <h5 class="plan__name">Free</h5>
                     <h3 class="plan__price"><span class="sign">$</span>0</h3>
-                    <div class="plam__divider"></div>
+                    <div class="plan__divider"></div>
 
                     <ul class="features" role="list">
                         <li class="feature">
@@ -180,7 +180,7 @@
                 <div class="plan">
                     <h5 class="plan__name">Free</h5>
                     <h3 class="plan__price"><span class="sign">$</span>0</h3>
-                    <div class="plam__divider"></div>
+                    <div class="plan__divider"></div>
 
                     <ul class="features" role="list">
                         <li class="feature">
