update html and css

--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -127,23 +127,23 @@
                     <ul class="features" role="list">
                         <li class="feature">
                             <img class="feature__icon" src="images/check.png" alt="Checked">
-                            <p class="feauture__text">7,000,000+ Events</p>
+                            <p class="feature__text">7,000,000+ Events</p>
                         </li>
                         <li class="feature">
                             <img class="feature__icon" src="images/check.png" alt="Checked">
-                            <p class="feauture__text">4 Custom Domains</p>
+                            <p class="feature__text">4 Custom Domains</p>
                         </li>
                         <li class="feature">
                             <img class="feature__icon" src="images/check.png" alt="Checked">
-                            <p class="feauture__text">Dedicated Support Agent</p>
+                            <p class="feature__text">Dedicated Support Agent</p>
                         </li>
                         <li class="feature">
                             <img class="feature__icon" src="images/check.png" alt="Checked">
-                            <p class="feauture__text">12 Months Data History</p>
+                            <p class="feature__text">12 Months Data History</p>
                         </li>
                         <li class="feature">
                             <img class="feature__icon" src="images/check.png" alt="Checked">
-                            <p class="feauture__text">1 Dedicated SSL</p>
+                            <p class="feature__text">1 Dedicated SSL</p>
                         </li>
                     </ul>
                     <button class="btn btn--secondary plan__cta">Get Started</button>
@@ -156,23 +156,23 @@
                     <ul class="features" role="list">
                         <li class="feature">
                             <img class="feature__icon" src="images/check.png" alt="Checked">
-                            <p class="feauture__text">7,000,000+ Events</p>
+                            <p class="feature__text">7,000,000+ Events</p>
                         </li>
                         <li class="feature">
                             <img class="feature__icon" src="images/check.png" alt="Checked">
-                            <p class="feauture__text">4 Custom Domains</p>
+                            <p class="feature__text">4 Custom Domains</p>
                         </li>
                         <li class="feature">
                             <img class="feature__icon" src="images/check.png" alt="Checked">
-                            <p class="feauture__text">Dedicated Support Agent</p>
+                            <p class="feature__text">Dedicated Support Agent</p>
                         </li>
                         <li class="feature">
                             <img class="feature__icon" src="images/check.png" alt="Checked">
-                            <p class="feauture__text">12 Months Data History</p>
+                            <p class="feature__text">12 Months Data History</p>
                         </li>
                         <li class="feature">
                             <img class="feature__icon" src="images/check.png" alt="Checked">
-                            <p class="feauture__text">1 Dedicated SSL</p>
+                            <p class="feature__text">1 Dedicated SSL</p>
                         </li>
                     </ul>
                     <button class="btn btn--secondary plan__cta">Get Started</button>
@@ -185,23 +185,23 @@
                     <ul class="features" role="list">
                         <li class="feature">
                             <img class="feature__icon" src="images/check.png" alt="Checked">
-                            <p class="feauture__text">7,000,000+ Events</p>
+                            <p class="feature__text">7,000,000+ Events</p>
                         </li>
                         <li class="feature">
                             <img class="feature__icon" src="images/check.png" alt="Checked">
-                            <p class="feauture__text">4 Custom Domains</p>
+                            <p class="feature__text">4 Custom Domains</p>
                         </li>
                         <li class="feature">
                             <img class="feature__icon" src="images/check.png" alt="Checked">
-                            <p class="feauture__text">Dedicated Support Agent</p>
+                            <p class="feature__text">Dedicated Support Agent</p>
                         </li>
                         <li class="feature">
                             <img class="feature__icon" src="images/check.png" alt="Checked">
-                            <p class="feauture__text">12 Months Data History</p>
+                            <p class="feature__text">12 Months Data History</p>
                         </li>
                         <li class="feature">
                             <img class="feature__icon" src="images/check.png" alt="Checked">
-                            <p class="feauture__text">1 Dedicated SSL</p>
+                            <p class="feature__text">1 Dedicated SSL</p>
                         </li>
                     </ul>
                     <button class="btn btn--secondary plan__cta">Get Started</button>
