--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -66,6 +66,72 @@
 
         </section>
 
+        <section id="features" class="section">
+            <h2 class="features__title">
+                Features
+            </h2>
+            <h5 class="features__sub-title">
+                Our landing page template works seamlessly on all devices.
+            </h5>
+            <ul class="features__grid" role="list">
+                <li class="feat">
+                    <img src="images/dashboard.png" alt="" class="feat__icon">
+                    <h3 class="feat__title">Dashboard</h3>
+                    <p>A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise
+                        layouts for previewing layouts and visual mockups.
+                    </p>
+                </li>
+                <li class="feat">
+                    <img src="images/dashboard.png" alt="" class="feat__icon">
+                    <h3 class="feat__title">Dashboard</h3>
+                    <p>
+                        A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise
+                        layouts for previewing layouts and visual mockups.
+                    </p>
+                </li>
+                <li class="feat">
+                    <img src="images/msg.png" alt="" class="feat__icon">
+                    <h3 class="feat__title">Comment</h3>
+                    <p>
+                        A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise
+                        layouts for previewing layouts and visual mockups.
+                    </p>
+                </li>
+                <li class="feat">
+                    <img src="images/dot.png" alt="" class="feat__icon">
+                    <h3 class="feat__title">Tailored Comments</h3>
+                    <p>
+                        A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise
+                        layouts for previewing layouts and visual mockups.
+                    </p>
+                </li>
+                <li class="feat">
+                    <img src="images/graph.png" alt="" class="feat__icon">
+                    <h3 class="feat__title">Statistic</h3>
+                    <p>
+                        A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise
+                        layouts for previewing layouts and visual mockups.
+                    </p>
+                </li>
+                <li class="feat">
+                    <img src="images/ball.png" alt="" class="feat__icon">
+                    <h3 class="feat__title">Profiles</h3>
+                    <p>
+                        A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise
+                        layouts for previewing layouts and visual mockups.
+                    </p>
+                </li>
+                <li class="feat">
+                    <img src="images/folder.png" alt="" class="feat__icon">
+                    <h3 class="feat__title">Folders</h3>
+                    <p>
+                        A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise
+                        layouts for previewing layouts and visual mockups.
+                    </p>
+                </li>
+            </ul>
+        </section>
+
         <section id="how-it-works" class="section">
             <h5 class="section__sub-title">saflow</h5>
             <h3 class="section__title">How does it worrk?</h3>
@@ -150,7 +216,7 @@
                 </div>
                 <div class="plan plan--promoted">
                     <h5 class="plan__name">Free</h5>
-                    <h3 class="plan__price"><span class="sign">$</span>0</h3>
+                    <h3 class="plan__price"><span class="sign">$</span>23</h3>
                     <div class="plan__divider"></div>
 
                     <ul class="features" role="list">
@@ -179,7 +245,7 @@
                 </div>
                 <div class="plan">
                     <h5 class="plan__name">Free</h5>
-                    <h3 class="plan__price"><span class="sign">$</span>0</h3>
+                    <h3 class="plan__price"><span class="sign">$</span> 59</h3>
                     <div class="plan__divider"></div>
 
                     <ul class="features" role="list">
