--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -76,55 +76,48 @@
             <ul class="features__grid" role="list">
                 <li class="feat">
                     <img src="images/dashboard.png" alt="" class="feat__icon">
-                    <h3 class="feat__title">Dashboard</h3>
-                    <p>A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise
-                        layouts for previewing layouts and visual mockups.
-                    </p>
-                </li>
-                <li class="feat">
-                    <img src="images/dashboard.png" alt="" class="feat__icon">
-                    <h3 class="feat__title">Dashboard</h3>
-                    <p>
+                    <h4 class="feat__title">Dashboard</h4>
+                    <p class="feat__desc">
                         A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise
                         layouts for previewing layouts and visual mockups.
                     </p>
                 </li>
                 <li class="feat">
                     <img src="images/msg.png" alt="" class="feat__icon">
-                    <h3 class="feat__title">Comment</h3>
-                    <p>
+                    <h4 class="feat__title">Comment</h4>
+                    <p class="feat__desc">
                         A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise
                         layouts for previewing layouts and visual mockups.
                     </p>
                 </li>
                 <li class="feat">
                     <img src="images/dot.png" alt="" class="feat__icon">
-                    <h3 class="feat__title">Tailored Comments</h3>
-                    <p>
+                    <h4 class="feat__title">Tailored Comments</h4>
+                    <p class="feat__desc">
                         A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise
                         layouts for previewing layouts and visual mockups.
                     </p>
                 </li>
                 <li class="feat">
                     <img src="images/graph.png" alt="" class="feat__icon">
-                    <h3 class="feat__title">Statistic</h3>
-                    <p>
+                    <h4 class="feat__title">Statistic</h4>
+                    <p class="feat__desc">
                         A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise
                         layouts for previewing layouts and visual mockups.
                     </p>
                 </li>
                 <li class="feat">
                     <img src="images/ball.png" alt="" class="feat__icon">
-                    <h3 class="feat__title">Profiles</h3>
-                    <p>
+                    <h4 class="feat__title">Profiles</h4>
+                    <p class="feat__desc">
                         A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise
                         layouts for previewing layouts and visual mockups.
                     </p>
                 </li>
                 <li class="feat">
                     <img src="images/folder.png" alt="" class="feat__icon">
-                    <h3 class="feat__title">Folders</h3>
-                    <p>
+                    <h4 class="feat__title">Folders</h4>
+                    <p class="feat__desc">
                         A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise
                         layouts for previewing layouts and visual mockups.
                     </p>
