--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -154,7 +154,7 @@
                         results.
                     </p>
                 </div>
-                <img src="images/how-02.png" alt="" class="row__img">
+                <img style="--rotate-deg: -10deg;" src="images/how-02.png" alt="" class="row__img">
             </div>
 
             <div class="hiw__row">
