--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -125,6 +125,15 @@
             </ul>
         </section>
 
+        <section id="trial" class="section">
+            <div class="trial__div">
+                <h5 class="trial__sub-title">READY TO START</h5>
+                <h3 class="trial__title">Start your free trial today!</h3>
+                <button class="btn btn--secondary plan__cta">Get Started</button>
+            </div>
+
+        </section>
+
         <section id="how-it-works" class="section">
             <h5 class="section__sub-title">saflow</h5>
             <h3 class="section__title">How does it worrk?</h3>
