--- a/Safia website/index.html
+++ b/Safia website/index.html
@@ -129,7 +129,7 @@
             <div class="trial__div">
                 <h5 class="trial__sub-title">READY TO START</h5>
                 <h3 class="trial__title">Start your free trial today!</h3>
-                <button class="btn btn--secondary plan__cta">Get Started</button>
+                <button class="trial__btn">Get Started</button>
             </div>
 
         </section>
